--- a/lang/de.json
+++ b/lang/de.json
@@ -25,8 +25,8 @@
   "Verify": "Verifizieren",
   "Sign Up": "Anmeldung",
   "Change language": "Sprache ändern",
-  "First Name Hint": "John",
-  "Enter your first name": "Geben Sie Ihren Vornamen ein",
+  "Name Hint": "John",
+  "Enter your name": "Geben Sie Ihren Namen ein",
   "Last Name Hint": "Carlos",
   "Enter your last name": "Geben Sie Ihren Nachnamen ein",
   "Confirm your password": "Bestätigen Sie Ihr Passwort",
