--- a/lang/en.json
+++ b/lang/en.json
@@ -26,8 +26,8 @@
   "Verify": "Verify",
   "Sign Up": "Sign Up",
   "Change language": "Change language",
-  "First Name Hint": "John",
-  "Enter your first name": "Enter your first name",
+  "Name Hint": "John",
+  "Enter your name": "Enter your first name",
   "Last Name Hint": "Carlos",
   "Enter your last name": "Enter your last name",
   "Confirm your password": "Confirm your password",
