--- a/lang/es.json
+++ b/lang/es.json
@@ -26,8 +26,8 @@
   "Verify": "Verificarlo",
   "Sign Up": "Inscribirse",
   "Change language": "Cambiar idioma",
-  "First Name Hint": "Isabela",
-  "Enter your first name": "Ponga su primer nombre",
+  "Name Hint": "Isabela",
+  "Enter your name": "Ponga su nombre",
   "Last Name Hint": "Rossellini",
   "Enter your last name": "Ingrese su apellido",
   "Confirm your password": "Confirmar la contraseña",
