--- a/lang/zh.json
+++ b/lang/zh.json
@@ -26,8 +26,8 @@
   "Verify": "验证一下",
   "Sign Up": "报名",
   "Change language": "改变语言",
-  "First Name Hint": "杰基",
-  "Enter your first name": "输入您的名字",
+  "Name Hint": "杰基",
+  "Enter your name": "输入您的名字",
   "Last Name Hint": "陈",
   "Enter your last name": "输入您的姓氏",
   "Confirm your password": "确认你的密码",
