--- a/lang/fr.json
+++ b/lang/fr.json
@@ -26,8 +26,8 @@
   "Verify": "Vérifier",
   "Sign Up": "S'inscrire",
   "Change language": "Changer de langue",
-  "First Name Hint": "John",
-  "Enter your first name": "Entrez votre prénom",
+  "Name Hint": "John",
+  "Enter your name": "Entrez votre prénom",
   "Last Name Hint": "Carlos",
   "Enter your last name": "Entrez votre nom de famille",
   "Confirm your password": "Confirmer votre mot de passe",
