--- a/lang/en.json
+++ b/lang/en.json
@@ -27,7 +27,7 @@
   "Sign Up": "Sign Up",
   "Change language": "Change language",
   "Name Hint": "John",
-  "Enter your name": "Enter your first name",
+  "Enter your name": "Enter your name",
   "Last Name Hint": "Carlos",
   "Enter your last name": "Enter your last name",
   "Confirm your password": "Confirm your password",
