Update tests and changes according to coderabbit

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -282,5 +282,36 @@
   "Remember me": "ログイン情報を保存",
   "Login directly with": "直接ログイン",
   "Continue Without Organization": "組織なしで続行",
-  "No admins assigned": "管理者が割り当てられていません"
+  "No admins assigned": "管理者が割り当てられていません",
+  "Delete Pledge": "プレッジを削除",
+  "Delete": "削除",
+  "Are you sure you want to delete this pledge?": "このプレッジを削除してもよろしいですか？",
+  "Create Pledge": "プレッジを作成",
+  "Select Pledger:": "プレッジャーを選択:",
+  "No pledger selected": "プレッジャーが選択されていません",
+  "Note": "メモ",
+  "Amount": "金額",
+  "Please enter an amount": "金額を入力してください",
+  "Create": "作成",
+  "Please fill all fields": "すべてのフィールドを入力してください",
+  "Update Pledge": "プレッジを更新",
+  "Pledge": "プレッジ",
+  "Unknown Pledger": "不明なプレッジャー",
+  "No note provided": "メモが提供されていません",
+  "Pledged": "プレッジ済み",
+  "Search Funds": "資金を検索",
+  "Search Campaigns": "キャンペーンを検索",
+  "Unknown Name": "不明な名前",
+  "Donated": "寄付済み",
+  "Unknown Creator": "不明な作成者",
+  "Campaign ID is not available": "キャンペーンIDが利用できません",
+  "Pledges for": "プレッジ対象",
+  "There are no pledges you are part of": "あなたが参加しているプレッジはありません",
+  "Cannot add pledge after campaign end date": "キャンペーン終了日後にプレッジを追加できません",
+  "Cannot add pledge before campaign start date": "キャンペーン開始日前にプレッジを追加できません",
+  "No funds in this organization.": "この組織には資金がありません。",
+  "Unknown Date": "不明な日付",
+  "Unnamed Fund": "無名の資金",
+  "Fund ID is not available": "ファンドIDが利用できません",
+  "Pledge ID or Campaign ID is not available": "プレッジIDまたはキャンペーンIDが利用できません"
 }
