--- a/lang/fr.json
+++ b/lang/fr.json
@@ -282,5 +282,36 @@
   "Remember me": "Souviens-toi de moi",
   "Login directly with": "Se connecter directement avec",
   "Continue Without Organization": "Continuer sans organisation",
-  "No admins assigned": "Aucun admin assigné"
+  "No admins assigned": "Aucun admin assigné",
+  "Delete Pledge": "Supprimer l'Engagement",
+  "Delete": "Supprimer",
+  "Are you sure you want to delete this pledge?": "Êtes-vous sûr de vouloir supprimer cet engagement ?",
+  "Create Pledge": "Créer un Engagement",
+  "Select Pledger:": "Sélectionner le Donateur :",
+  "No pledger selected": "Aucun donateur sélectionné",
+  "Note": "Note",
+  "Amount": "Montant",
+  "Please enter an amount": "Veuillez saisir un montant",
+  "Create": "Créer",
+  "Please fill all fields": "Veuillez remplir tous les champs",
+  "Update Pledge": "Mettre à jour l'Engagement",
+  "Pledge": "Engagement",
+  "Unknown Pledger": "Donateur Inconnu",
+  "No note provided": "Aucune note fournie",
+  "Pledged": "Engagé",
+  "Search Funds": "Rechercher des Fonds",
+  "Search Campaigns": "Rechercher des Campagnes",
+  "Unknown Name": "Nom Inconnu",
+  "Donated": "Donné",
+  "Unknown Creator": "Créateur Inconnu",
+  "Campaign ID is not available": "L'ID de la campagne n'est pas disponible",
+  "Pledges for": "Engagements pour",
+  "There are no pledges you are part of": "Il n'y a aucun engagement dont vous faites partie",
+  "Cannot add pledge after campaign end date": "Impossible d'ajouter un engagement après la date de fin de campagne",
+  "Cannot add pledge before campaign start date": "Impossible d'ajouter un engagement avant la date de début de campagne",
+  "No funds in this organization.": "Aucun fonds dans cette organisation.",
+  "Unknown Date": "Date Inconnue",
+  "Unnamed Fund": "Fonds Sans Nom",
+  "Fund ID is not available": "L'ID du fonds n'est pas disponible",
+  "Pledge ID or Campaign ID is not available": "L'ID de la promesse ou de la campagne n'est pas disponible"
 }
