GSOC:Fund raising Campaign (#2887)
* funds phase 1

* funds phase 2

* funds completed

* added test cases

* added test cases

* Updated test

* Updated test

* Updated test

* Delete test/views/after_auth_screens/funds/fund_pledges_screen_test.dart

* Updated test

* Update tests

* Update tests

* Update tests

* Update tests and changes according to coderabbit

* Update tests and changes according to coderabbit

* Update tests and changes according to coderabbit

* Update tests and changes according to coderabbit

* solve merge confliicts

--- a/lang/en.json
+++ b/lang/en.json
@@ -282,5 +282,50 @@
   "Remember me": "Remember me",
   "Login directly with": "Login directly with",
   "Continue Without Organization": "Continue Without Organization",
-  "No admins assigned": "No admins assigned"
+  "No admins assigned": "No admins assigned",
+  "Delete Pledge": "Delete Pledge",
+  "Delete": "Delete",
+  "Are you sure you want to delete this pledge?": "Are you sure you want to delete this pledge?",
+  "Create Pledge": "Create Pledge",
+  "Select Pledger:": "Select Pledger:",
+  "No pledger selected": "No pledger selected",
+  "Note": "Note",
+  "Amount": "Amount",
+  "Please enter an amount": "Please enter an amount",
+  "Create": "Create",
+  "Please fill all fields": "Please fill all fields",
+  "Update Pledge": "Update Pledge",
+  "Pledge": "Pledge",
+  "Unknown Pledger": "Unknown Pledger",
+  "No note provided": "No note provided",
+  "Pledged": "Pledged",
+  "Search Funds": "Search Funds",
+  "Search Campaigns": "Search Campaigns",
+  "Unknown Name": "Unknown Name",
+  "Donated": "Donated",
+  "Unknown Creator": "Unknown Creator",
+  "Campaign ID is not available": "Campaign ID is not available",
+  "Pledges for": "Pledges for",
+  "There are no pledges you are part of": "There are no pledges you are part of",
+  "Cannot add pledge after campaign end date": "Cannot add pledge after campaign end date",
+  "Cannot add pledge before campaign start date": "Cannot add pledge before campaign start date",
+  "No funds in this organization.": "No funds in this organization.",
+  "Unknown Date": "Unknown Date",
+  "Unnamed Fund": "Unnamed Fund",
+  "Fund ID is not available": "Fund ID is not available",
+  "Pledge ID or Campaign ID is not available": "Pledge ID or Campaign ID is not available",
+  "End Date (Latest)": "End Date (Latest)",
+  "End Date (Earliest)": "End Date (Earliest)",
+  "Amount (Highest)": "Amount (Highest)",
+  "Amount (Lowest)": "Amount (Lowest)",
+  "No campaigns for this fund": "No campaigns for this fund",
+  "Unnamed Campaign": "Unnamed Campaign",
+  "raised": "raised",
+  "Goal": "Goal",
+  "Status": "Status",
+  "Not set": "Not set",
+  "Unknown": "Unknown",
+  "Upcoming": "Upcoming",
+  "Ended": "Ended",
+  "Active": "Active"
 }
