--- a/lang/de.json
+++ b/lang/de.json
@@ -65,6 +65,7 @@
   "Add Event Title": "Ereignistitel hinzufügen",
   "Where is the event": "Wo ist die Veranstaltung",
   "Add Location": "Ort hinzufügen",
+  "Add Venue": "Veranstaltungsort hinzufügen",
   "Describe the event": "Beschreiben Sie die Veranstaltung",
   "Add Description": "Beschreibung hinzufügen",
   "Add Event": "Ereignis hinzufügen",
