--- a/lang/en.json
+++ b/lang/en.json
@@ -71,6 +71,7 @@
   "Add Event Title": "Add Event Title",
   "Where is the event": "Where is the event",
   "Add Location": "Add Location",
+  "Add Venue": "Add Venue",
   "Describe the event": "Describe the event",
   "Add Description": "Add Description",
   "Add Event": "Add Event",
