--- a/lang/fr.json
+++ b/lang/fr.json
@@ -71,6 +71,7 @@
   "Add Event Title": "Ajouter le titre de l'événement",
   "Where is the event": "Où est l'événement",
   "Add Location": "Ajouter un emplacement",
+  "Add Venue": "Ajouter un lieu d'événement",
   "Describe the event": "Décrivez l'événement",
   "Add Description": "Ajouter une description",
   "Add Event": "Ajouter un évènement",
