--- a/lang/hi.json
+++ b/lang/hi.json
@@ -66,6 +66,7 @@
   "Add Event Title": "घटना का शीर्षक जोड़ें",
   "Where is the event": "घटना कहाँ है",
   "Add Location": "स्थान जोड़ना",
+  "Add Venue": "कार्यक्रम स्थल जोड़ना",
   "Describe the event": "घटना का वर्णन करें",
   "Add Description": "विवरण जोड़ें",
   "Add Event": "कार्यक्रम जोड़ें",
