--- a/lang/ja.json
+++ b/lang/ja.json
@@ -66,6 +66,7 @@
   "Add Event Title": "イベントタイトルを追加",
   "Where is the event": "イベントはどこですか",
   "Add Location": "場所を追加",
+  "Add Venue": "会場を追加",
   "Describe the event": "イベントについて説明する",
   "Add Description": "説明を追加",
   "Add Event": "イベントを追加",
