--- a/lang/pt.json
+++ b/lang/pt.json
@@ -66,6 +66,7 @@
   "Add Event Title": "Adicionar Título do Evento",
   "Where is the event": "Onde é o evento",
   "Add Location": "Adicionar local",
+  "Add Venue": "Adicionar local do evento",
   "Describe the event": "Descreva o evento",
   "Add Description": "Adicionar descrição",
   "Add Event": "Adicionar Evento",
