--- a/lang/zh.json
+++ b/lang/zh.json
@@ -66,6 +66,7 @@
   "Add Event Title": "添加活动标题",
   "Where is the event": "活动地点",
   "Add Location": "添加位置",
+  "Add Venue": "添加活动场地",
   "Describe the event": "描述事件",
   "Add Description": "添加描述",
   "Add Event": "添加事件",
