--- a/lang/es.json
+++ b/lang/es.json
@@ -66,6 +66,7 @@
   "Add Event Title": "Agregar título de evento",
   "Where is the event": "Donde es el evento",
   "Add Location": "Añadir lugar",
+  "Add Venue": "Añadir lugar de evento",
   "Describe the event": "Describe el evento",
   "Add Description": "Añadir descripción",
   "Add Event": "Añadir evento",
