feat: Add generic URL support for custom server configuration
- Add collapsible Server URL input field to login and signup screens
- Implement URL caching in Hive local storage
- Add URL validation (format and existence checks)
- Add web platform compatibility with kIsWeb checks
- Add translations for 8 languages (en, de, es, fr, hi, ja, pt, zh)
- Add comprehensive documentation

Fixes #3013

--- a/lang/de.json
+++ b/lang/de.json
@@ -279,7 +279,9 @@
   "Organisation on different server, logout and scan qr again": "Organisation auf einem anderen Server, ausloggen und QR-Code erneut scannen",
   "Post was deleted if you had the rights!": "Der Beitrag wurde gelöscht, wenn Sie die Berechtigungen hatten!",
   "Members": "Mitglieder",
-  "Remember me": "Erinnere dich an mich", 
-  "Login directly with": "Direkt anmelden mit",
-  "Continue Without Organization": "Ohne Organisation fortfahren"
+  "Remember me": "Erinnere dich an mich",
+  "Login directly with": "Direkt einloggen mit",
+  "Continue Without Organization": "Ohne Organisation fortfahren",
+  "Server URL": "Server-URL",
+  "Enter Server URL": "Server-URL eingeben"
 }
