--- a/lang/en.json
+++ b/lang/en.json
@@ -281,5 +281,7 @@
   "Members": "Members",
   "Remember me": "Remember me",
   "Login directly with": "Login directly with",
-  "Continue Without Organization": "Continue Without Organization"
+  "Continue Without Organization": "Continue Without Organization",
+  "Server URL": "Server URL",
+  "Enter Server URL": "Enter Server URL"
 }
