--- a/lang/es.json
+++ b/lang/es.json
@@ -281,5 +281,7 @@
   "Members": "Miembros",
   "Remember me": "Recuérdame",
   "Login directly with": "Iniciar sesión directamente con",
-  "Continue Without Organization": "Continuar sin organización"
+  "Continue Without Organization": "Continuar sin organización",
+  "Server URL": "URL del servidor",
+  "Enter Server URL": "Ingrese la URL del servidor"
 }
