refactor: Address CodeRabbit review feedback
- Fix AppLocalizations import path in ServerUrlSection widget
- Change callback type from Future<void> to Future<bool> for type safety
- Remove duplicate urlKey/imageUrlKey constants from view models
- Use DI pattern (locator<UrlUpdateService>()) instead of direct instantiation
- Refactor loadCurrentUrl() to use UrlUpdateService.getCurrentUrl()
- Add localization for all URL update messages (8 languages)
- Add proper disposal methods for urlController and urlFocus
- Improve error handling in loadCurrentUrl() with try-catch

This addresses all 9 CodeRabbit review comments and maintains
consistency with project patterns.

--- a/lang/de.json
+++ b/lang/de.json
@@ -283,5 +283,8 @@
   "Login directly with": "Direkt einloggen mit",
   "Continue Without Organization": "Ohne Organisation fortfahren",
   "Server URL": "Server-URL",
-  "Enter Server URL": "Server-URL eingeben"
+  "Enter Server URL": "Server-URL eingeben",
+  "URL updated successfully": "URL erfolgreich aktualisiert",
+  "URL doesn't exist/no connection": "URL existiert nicht oder keine Verbindung. Bitte überprüfen und erneut versuchen.",
+  "Error updating URL": "Fehler beim Aktualisieren der URL. Bitte erneut versuchen."
 }
