made changes suggested by coderabbit

--- a/lang/en.json
+++ b/lang/en.json
@@ -47,6 +47,9 @@
   "Title from the viewMode GSoC branch": "Title from the viewMode GSoC branch",
   "Please verify URL first": "Please verify URL first",
   "Enter a valid URL": "Enter a valid URL",
+  "No URL configured. Please set URL first.": "No URL configured. Please set URL first.",
+  "Join Organisation with QR": "Join Organisation with QR",
+  "Scan QR": "Scan QR",
   "Firstname must not be left blank.": "Firstname must not be left blank.",
   "Invalid Firstname": "Invalid Firstname",
   "Lastname must not be left blank.": "Lastname must not be left blank.",
