--- a/lang/es.json
+++ b/lang/es.json
@@ -42,6 +42,9 @@
   "Title from the viewMode GSoC branch": "Título de la rama viewMode GSoC",
   "Please verify URL first": "Primero verifique la URL",
   "Enter a valid URL": "Ingrese una URL válida",
+  "No URL configured. Please set URL first.": "No hay URL configurada. Por favor configure la URL primero.",
+  "Join Organisation with QR": "Unirse a la organización con QR",
+  "Scan QR": "Escanear QR",
   "Firstname must not be left blank.": "El nombre no debe dejarse en blanco.",
   "Invalid Firstname": "Nombre inválido",
   "Lastname must not be left blank.": "El apellido no debe dejarse en blanco.",
