--- a/lang/fr.json
+++ b/lang/fr.json
@@ -47,6 +47,9 @@
   "Title from the viewMode GSoC branch": "Titre de la branche viewMode GSoC",
   "Please verify URL first": "Veuillez d'abord vérifier l'URL",
   "Enter a valid URL": "Saisissez une URL valide",
+  "No URL configured. Please set URL first.": "Aucune URL configurée. Veuillez d'abord définir l'URL.",
+  "Join Organisation with QR": "Rejoindre l'organisation avec QR",
+  "Scan QR": "Scanner le QR",
   "Firstname must not be left blank.": "Le prénom ne doit pas être laissé en blanc.",
   "Invalid Firstname": "Prénom invalide",
   "Lastname must not be left blank.": "Le nom de famille ne doit pas être laissé vide.",
