--- a/lang/hi.json
+++ b/lang/hi.json
@@ -42,6 +42,9 @@
   "Title from the viewMode GSoC branch": "व्यूमोड जीएसओसी शाखा से शीर्षक",
   "Please verify URL first": "कृपया पहले URL सत्यापित करें",
   "Enter a valid URL": "एक मान्य यूआरएल दर्ज करें",
+  "No URL configured. Please set URL first.": "कोई URL कॉन्फ़िगर नहीं किया गया। कृपया पहले URL सेट करें।",
+  "Join Organisation with QR": "QR के साथ संगठन में शामिल हों",
+  "Scan QR": "QR स्कैन करें",
   "Firstname must not be left blank.": "प्रथम नाम खाली नहीं छोड़ा जाना चाहिए।",
   "Invalid Firstname": "अमान्य प्रथम नाम",
   "Lastname must not be left blank.": "उपनाम खाली नहीं छोड़ा जाना चाहिए।",
