--- a/lang/de.json
+++ b/lang/de.json
@@ -41,6 +41,9 @@
   "Title from the viewMode GSoC branch": "Titel aus dem Ansichtsmodus GSoC-Zweig",
   "Please verify URL first": "Bitte zuerst URL bestätigen",
   "Enter a valid URL": "Geben Sie eine gültige URL ein",
+  "No URL configured. Please set URL first.": "Keine URL konfiguriert. Bitte setzen Sie zuerst die URL.",
+  "Join Organisation with QR": "Organisation mit QR beitreten",
+  "Scan QR": "QR scannen",
   "Firstname must not be left blank.": "Der Vorname darf nicht leer bleiben.",
   "Invalid Firstname": "Ungültiger Vorname",
   "Lastname must not be left blank.": "Der Nachname darf nicht leer bleiben.",
