--- a/lang/pt.json
+++ b/lang/pt.json
@@ -42,6 +42,9 @@
   "Title from the viewMode GSoC branch": "Título da ramificação viewMode GSoC",
   "Please verify URL first": "Verifique o URL primeiro",
   "Enter a valid URL": "Insira um URL válido",
+  "No URL configured. Please set URL first.": "Nenhuma URL configurada. Por favor, defina a URL primeiro.",
+  "Join Organisation with QR": "Participar da organização com QR",
+  "Scan QR": "Escanear QR",
   "Firstname must not be left blank.": "O nome não deve ser deixado em branco.",
   "Invalid Firstname": "Nome Inválido",
   "Lastname must not be left blank.": "O sobrenome não deve ser deixado em branco.",
