--- a/lang/zh.json
+++ b/lang/zh.json
@@ -42,6 +42,9 @@
   "Title from the viewMode GSoC branch": "来自 viewMode GSoC 分支的标题",
   "Please verify URL first": "请先验证网址",
   "Enter a valid URL": "输入有效的网址",
+  "No URL configured. Please set URL first.": "未配置URL。请先设置URL。",
+  "Join Organisation with QR": "使用二维码加入组织",
+  "Scan QR": "扫描二维码",
   "Firstname must not be left blank.": "名字不能留空。",
   "Invalid Firstname": "名字无效",
   "Lastname must not be left blank.": "姓氏不能留空。",
