Add localized error messages for QR scanning and camera issues in multiple languages

--- a/lang/de.json
+++ b/lang/de.json
@@ -179,6 +179,10 @@
   "COMPLETE": "VOLLSTÄNDIG",
   "Start app tour to know talawa functioning": "Starten Sie die App-Tour, um die Funktionsweise von Talawa zu erfahren",
   "Scan QR": "QR scannen",
+  "The Camera is not working": "Die Kamera funktioniert nicht",
+  "The QR is not Working": "Der QR-Code funktioniert nicht",
+  "This QR version is not Supported.": "Diese QR-Version wird nicht unterstützt.",
+  "This QR is not for the App": "Dieser QR-Code ist nicht für die App",
   "Add tag": "Tag hinzufügen",
   "Enter the Tag": "Geben Sie das Tag ein",
   "Title": "Titel",
