--- a/lang/es.json
+++ b/lang/es.json
@@ -179,6 +179,10 @@
   "COMPLETE": "COMPLETO",
   "Start app tour to know talawa functioning": "Inicie el recorrido por la aplicación para conocer el funcionamiento de talawa",
   "Scan QR": "Escanear QR",
+  "The Camera is not working": "La cámara no funciona",
+  "The QR is not Working": "El código QR no funciona",
+  "This QR version is not Supported.": "Esta versión de QR no es compatible.",
+  "This QR is not for the App": "Este QR no es para la aplicación",
   "Add tag": "Añadir etiqueta",
   "Enter the Tag": "Ingrese la Etiqueta",
   "Title": "Título",
