--- a/lang/fr.json
+++ b/lang/fr.json
@@ -179,6 +179,10 @@
   "COMPLETE": "COMPLÉTER",
   "Start app tour to know talawa functioning": "Démarrez la visite de l'application pour connaître le fonctionnement de talawa",
   "Scan QR": "Scanner QR",
+  "The Camera is not working": "La caméra ne fonctionne pas",
+  "The QR is not Working": "Le QR ne fonctionne pas",
+  "This QR version is not Supported.": "Cette version de QR n'est pas prise en charge.",
+  "This QR is not for the App": "Ce QR n'est pas pour l'application",
   "Add tag": "Ajouter un tag",
   "Enter the Tag": "Entrez le Tag",
   "Title": "Titre",
