--- a/lang/pt.json
+++ b/lang/pt.json
@@ -179,6 +179,10 @@
   "COMPLETE": "COMPLETO",
   "Start app tour to know talawa functioning": "Inicie o tour do aplicativo para conhecer o funcionamento do talawa",
   "Scan QR": "Escanear QR",
+  "The Camera is not working": "A câmera não está funcionando",
+  "The QR is not Working": "O QR não está funcionando",
+  "This QR version is not Supported.": "Esta versão do QR não é suportada.",
+  "This QR is not for the App": "Este QR não é para o aplicativo",
   "Add tag": "Adicionar tag",
   "Enter the Tag": "Digite a Tag",
   "Title": "Título",
