--- a/lang/zh.json
+++ b/lang/zh.json
@@ -179,6 +179,10 @@
   "COMPLETE": "完成",
   "Start app tour to know talawa functioning": "启动应用程序导览以了解塔拉瓦的功能",
   "Scan QR": "扫描QR码",
+  "The Camera is not working": "相机无法工作",
+  "The QR is not Working": "二维码无法工作",
+  "This QR version is not Supported.": "不支持此二维码版本。",
+  "This QR is not for the App": "此二维码不适用于该应用",
   "Add tag": "添加标签",
   "Enter the Tag": "输入标签",
   "Title": "标题",
