--- a/lang/ja.json
+++ b/lang/ja.json
@@ -45,6 +45,10 @@
   "No URL configured. Please set URL first.": "URLが設定されていません。まずURLを設定してください。",
   "Join Organisation with QR": "QRで組織に参加",
   "Scan QR": "QRをスキャン",
+  "The Camera is not working": "カメラが動作していません",
+  "The QR is not Working": "QRが動作していません",
+  "This QR version is not Supported.": "このQRバージョンはサポートされていません。",
+  "This QR is not for the App": "このQRはアプリ用ではありません",
   "Firstname must not be left blank.": "名を空白のままにしないでください。",
   "Invalid Firstname": "無効な名",
   "Lastname must not be left blank.": "姓を空白のままにしないでください。",
