fixed app localization issues

--- a/lang/de.json
+++ b/lang/de.json
@@ -179,10 +179,6 @@
   "COMPLETE": "VOLLSTÄNDIG",
   "Start app tour to know talawa functioning": "Starten Sie die App-Tour, um die Funktionsweise von Talawa zu erfahren",
   "Scan QR": "QR scannen",
-  "The Camera is not working": "Die Kamera funktioniert nicht",
-  "The QR is not Working": "Der QR-Code funktioniert nicht",
-  "This QR version is not Supported.": "Diese QR-Version wird nicht unterstützt.",
-  "This QR is not for the App": "Dieser QR-Code ist nicht für die App",
   "Add tag": "Tag hinzufügen",
   "Enter the Tag": "Geben Sie das Tag ein",
   "Title": "Titel",
@@ -269,7 +265,8 @@
   "Organization Not Found": "Organisation nicht gefunden",
   "Account with this email already registered": "Konto mit dieser E-Mail bereits registriert",
   "Something went wrong!": "Etwas ist schief gelaufen!",
-  "URL doesn't exist/no connection please check": "URL existiert nicht/keine Verbindung, bitte überprüfen Sie",
+  "URL doesn't exist/no connection please check": "URL existiert nicht/keine Verbindung, bitte überprüfen Sie",  
+  "URL is valid": "URL ist gültig",  
   "The QR is not Working": "Der QR-Code funktioniert nicht",
   "This QR version is not Supported.": "Diese QR-Version wird nicht unterstützt.",
   "Comment sent": "Kommentar gesendet",
