--- a/lang/fr.json
+++ b/lang/fr.json
@@ -179,10 +179,6 @@
   "COMPLETE": "COMPLÉTER",
   "Start app tour to know talawa functioning": "Démarrez la visite de l'application pour connaître le fonctionnement de talawa",
   "Scan QR": "Scanner QR",
-  "The Camera is not working": "La caméra ne fonctionne pas",
-  "The QR is not Working": "Le QR ne fonctionne pas",
-  "This QR version is not Supported.": "Cette version de QR n'est pas prise en charge.",
-  "This QR is not for the App": "Ce QR n'est pas pour l'application",
   "Add tag": "Ajouter un tag",
   "Enter the Tag": "Entrez le Tag",
   "Title": "Titre",
@@ -269,7 +265,8 @@
   "Organization Not Found": "Organisation non trouvée",
   "Account with this email already registered": "Compte avec cet e-mail déjà enregistré",
   "Something went wrong!": "Quelque chose s'est mal passé !",
-  "URL doesn't exist/no connection please check": "L'URL n'existe pas/pas de connexion, veuillez vérifier",
+  "URL doesn't exist/no connection please check": "L'URL n'existe pas/pas de connexion, veuillez vérifier",  
+  "URL is valid": "L'URL est valide",  
   "The QR is not Working": "Le code QR ne fonctionne pas",
   "This QR version is not Supported.": "Cette version de code QR n'est pas prise en charge.",
   "Comment sent": "Commentaire envoyé",
