--- a/lang/ja.json
+++ b/lang/ja.json
@@ -45,10 +45,6 @@
   "No URL configured. Please set URL first.": "URLが設定されていません。まずURLを設定してください。",
   "Join Organisation with QR": "QRで組織に参加",
   "Scan QR": "QRをスキャン",
-  "The Camera is not working": "カメラが動作していません",
-  "The QR is not Working": "QRが動作していません",
-  "This QR version is not Supported.": "このQRバージョンはサポートされていません。",
-  "This QR is not for the App": "このQRはアプリ用ではありません",
   "Firstname must not be left blank.": "名を空白のままにしないでください。",
   "Invalid Firstname": "無効な名",
   "Lastname must not be left blank.": "姓を空白のままにしないでください。",
@@ -270,6 +266,7 @@
   "Account with this email already registered": "このメールアドレスではすでにアカウントが登録されています",
   "Something went wrong!": "何かが間違っています！",
   "URL doesn't exist/no connection please check": "URLが存在しない/接続がないため、確認してください",
+  "URL is valid": "URLは有効です",
   "The QR is not Working": "QRコードが動作していません",
   "This QR version is not Supported.": "このQRバージョンはサポートされていません。",
   "Comment sent": "コメントを送信しました",
