--- a/lang/en.json
+++ b/lang/en.json
@@ -179,10 +179,6 @@
   "COMPLETE": "COMPLETE",
   "Start app tour to know talawa functioning": "Start app tour to know talawa functioning",
   "Scan QR": "Scan QR",
-  "The Camera is not working": "The Camera is not working",
-  "The QR is not Working": "The QR is not Working",
-  "This QR version is not Supported.": "This QR version is not Supported.",
-  "This QR is not for the App": "This QR is not for the App",
   "Add tag": "Add tag",
   "Enter the Tag": "Enter the Tag",
   "Title": "Title",
@@ -270,6 +266,7 @@
   "Account with this email already registered": "Account with this email already registered",
   "Something went wrong!": "Something went wrong!",
   "URL doesn't exist/no connection please check": "URL doesn't exist/no connection please check",
+  "URL is valid": "URL is valid",
   "The QR is not Working": "The QR is not Working",
   "This QR version is not Supported.": "This QR version is not Supported.",
   "Comment sent": "Comment sent",
