--- a/lang/es.json
+++ b/lang/es.json
@@ -38,12 +38,12 @@
   "and": "y",
   "Collaborate": "colabore",
   "with your": "con sus",
-  "Organizations": "organizaciones",
+  "Organizations": "Organizaciones",
   "Title from the viewMode GSoC branch": "Título de la rama viewMode GSoC",
   "Please verify URL first": "Primero verifique la URL",
   "Enter a valid URL": "Ingrese una URL válida",
   "No URL configured. Please set URL first.": "No hay URL configurada. Por favor configure la URL primero.",
-  "Join Organisation with QR": "Unirse a la organización con QR",
+  "Join Organisation with QR": "Unirse a la Organización con QR",
   "Firstname must not be left blank.": "El nombre no debe dejarse en blanco.",
   "Invalid Firstname": "Nombre inválido",
   "Lastname must not be left blank.": "El apellido no debe dejarse en blanco.",
@@ -54,7 +54,7 @@
   "Your password must be at least 8 characters long, contain at least one numeric, one uppercase and one lowercase letters and one special character (@,#,$,etc.)": "Su contraseña debe tener al menos 8 caracteres, contener al menos una letra numérica, una mayúscula y una minúscula y un carácter especial (@, #, $, etc.)",
   "Password must not contain spaces": "La contraseña no debe contener espacios",
   "Password does not match original": "La contraseña no coincide con la original",
-  "Join Organisation": "Unirse a la organización",
+  "Join Organisation": "Unirse a la Organización",
   "We're": "Nos",
   "Glad": "alegra que",
   "you're": "hayas",
@@ -64,7 +64,7 @@
   "you": "te",
   "SignUp": "registres",
   "Please wait": "Espere por favor",
-  "for organisation(s) to accept your invitation.": "para que la (s) organización (es) acepten su invitación..",
+  "for organisation(s) to accept your invitation.": "para que la(s) Organización(es) acepten su invitación.",
   "Add Event Title": "Agregar título de evento",
   "Where is the event": "Donde es el evento",
   "Add Location": "Añadir lugar",
@@ -127,7 +127,7 @@
   "Organization Name": "Nombre de la Organización",
   "Add hasthtag": "Agregar hashtag",
   "Write here what do you want to share": "Escribe aquí lo que quieres compartir",
-  "Join selected organisation": "Unirse a la organización seleccionada",
+  "Join selected organisation": "Unirse a la Organización seleccionada",
   "Home": "Casa",
   "Events": "Eventos",
   "Chat": "Chat",
@@ -135,9 +135,9 @@
   "Confirm": "Confirmar",
   "Confirmation": "Confirmación",
   "Close": "Cerca",
-  "Switch Organization": "Cambiar de organización",
-  "Join new Organization": "Unirse a una nueva organización",
-  "Leave Current Organization": "Dejar la organización actual",
+  "Switch Organization": "Cambiar de Organización",
+  "Join new Organization": "Unirse a una nueva Organización",
+  "Leave Current Organization": "Dejar la Organización actual",
   "Creator": "Creadora",
   "Public": "Pública",
   "Private": "Privada",
@@ -156,7 +156,7 @@
   "Switched to": "Cambiado a",
   "Organisation already joined": "Organización ya unida",
   "Membership request already sent": "Solicitud de membresía ya enviada",
-  "Select one organization to continue": "Seleccione una organización para continuar",
+  "Select one organization to continue": "Seleccione una Organización para continuar",
   "Something went wrong": "Algo salió mal",
   "Join in request sent to": "Únase a la solicitud enviada a",
   "successfully": "exitosamente",
@@ -169,9 +169,9 @@
   "Information": "Información",
   "No account registered with this email": "El servidor no se está ejecutando/url",
   "Dismiss": "despedir",
-  "No organizations found Please contact your admin": "Neniuj organizoj trovitaj! Bonvolu kontakti vian administranton",
+  "No organizations found Please contact your admin": "No se encontraron Organizaciones. Por favor contacte a su administrador",
   "For complete access, please": "Para acceso completo, por favor",
-  "join an organization.": "  unirse a una organización.",
+  "join an organization.": "unirse a una Organización.",
   "JOIN": "UNIRSE",
   "Camera": "Cámara",
   "Gallery": "Galería",
@@ -179,10 +179,6 @@
   "COMPLETE": "COMPLETO",
   "Start app tour to know talawa functioning": "Inicie el recorrido por la aplicación para conocer el funcionamiento de talawa",
   "Scan QR": "Escanear QR",
-  "The Camera is not working": "La cámara no funciona",
-  "The QR is not Working": "El código QR no funciona",
-  "This QR version is not Supported.": "Esta versión de QR no es compatible.",
-  "This QR is not for the App": "Este QR no es para la aplicación",
   "Add tag": "Añadir etiqueta",
   "Enter the Tag": "Ingrese la Etiqueta",
   "Title": "Título",
@@ -202,7 +198,7 @@
   "Log Out": "Cerrar sesión",
   "Please Select an amount": "Por favor, seleccione una cantidad",
   "Input custom amount": "Ingresar cantidad personalizada",
-  "Organisation Name": "Nombre de la organización",
+  "Organisation Name": "Nombre de la Organización",
   "Choose an Organization": "Elija una Organización",
   "Your Report has been sent to the Admin": "Su informe ha sido enviado al Administrador",
   "Report the post to the Admin": "Reportar la publicación al Administrador",
@@ -216,32 +212,32 @@
   "Donate to the Community": "Donar a la Comunidad",
   "Donating to": "Donando a",
   "Are you sure you want to delete this event?": "¿Estás seguro de que quieres eliminar este evento?",
-  "Are you sure you want to exit this organization?": "¿Estás seguro de que quieres salir de esta organización?",
+  "Are you sure you want to exit this organization?": "¿Estás seguro de que quieres salir de esta Organización?",
   "This is the Profile tab here you can see all options related to account, app setting, invitation, help etc": "Esta es la pestaña de Perfil, aquí puedes ver todas las opciones relacionadas con la cuenta, configuración de la aplicación, invitación, ayuda, etc.",
   "You can edit application settings like language, theme etc from here": "Puedes editar la configuración de la aplicación, como el idioma, el tema, etc., desde aquí",
   "For any help we are always there. You can reach us from here": "Para cualquier ayuda, siempre estamos aquí. Puedes contactarnos desde aquí",
-  "Current selected Organization Name": "Nombre de la organización actualmente seleccionada",
-  "Click this button to see options related to switching, joining and leaving organization(s)": "Haz clic en este botón para ver opciones relacionadas con cambiar, unirse y salir de organizaciones",
-  "Current selected Organization's Name appears here": "El nombre de la organización actualmente seleccionada aparece aquí",
-  "All your joined organizations appear over here you can click on them to change the current organization": "Todas las organizaciones a las que te has unido aparecen aquí; puedes hacer clic en ellas para cambiar la organización actual",
-  "From this button you can join other listed organizations": "Desde este botón, puedes unirte a otras organizaciones enumeradas",
-  "To leave the current organization you can use this option": "Para salir de la organización actual, puedes usar esta opción",
+  "Current selected Organization Name": "Nombre de la Organización actualmente seleccionada",
+  "Click this button to see options related to switching, joining and leaving organization(s)": "Haz clic en este botón para ver opciones relacionadas con cambiar, unirse y salir de Organizaciones",
+  "Current selected Organization's Name appears here": "El nombre de la Organización actualmente seleccionada aparece aquí",
+  "All your joined organizations appear over here you can click on them to change the current organization": "Todas las Organizaciones a las que te has unido aparecen aquí; puedes hacer clic en ellas para cambiar la Organización actual",
+  "From this button you can join other listed organizations": "Desde este botón, puedes unirte a otras Organizaciones enumeradas",
+  "To leave the current organization you can use this option": "Para salir de la Organización actual, puedes usar esta opción",
   "This is the post card you can like and comment on the post from the options available": "Esta es la tarjeta de la publicación; puedes darle me gusta y comentar en la publicación desde las opciones disponibles",
-  "This is the Events tab here you can see all event related information of the current selected organization": "Esta es la pestaña de Eventos; aquí puedes ver toda la información relacionada con eventos de la organización actualmente seleccionada",
-  "This is the home tab here you can see the latest post from other members of the current organization": "Esta es la pestaña de Inicio; aquí puedes ver la última publicación de otros miembros de la organización actual",
-  "This section displays all the important post set by the organization admin(s)": "Esta sección muestra todas las publicaciones importantes establecidas por el(los) administrador(es) de la organización",
+  "This is the Events tab here you can see all event related information of the current selected organization": "Esta es la pestaña de Eventos; aquí puedes ver toda la información relacionada con eventos de la Organización actualmente seleccionada",
+  "This is the home tab here you can see the latest post from other members of the current organization": "Esta es la pestaña de Inicio; aquí puedes ver la última publicación de otros miembros de la Organización actual",
+  "This section displays all the important post set by the organization admin(s)": "Esta sección muestra todas las publicaciones importantes establecidas por el(los) administrador(es) de la Organización",
   "Filter Events based on categories": "Filtrar eventos según categorías",
   "Filter Events between selected dates": "Filtrar eventos entre las fechas seleccionadas",
   "Description of event to see more details click on the card": "Descripción del evento; para ver más detalles, haz clic en la tarjeta",
-  "This is the Create post tab here you can add post to the current selected organization": "Esta es la pestaña de Crear publicación; aquí puedes agregar una publicación a la organización actualmente seleccionada",
-  "This is the Chat tab here you can see all your messages of the current selected organization": "Esta es la pestaña de Chat; aquí puedes ver todos tus mensajes de la organización actualmente seleccionada",
-  "To help your organization grow you can support them financially from here": "Para ayudar a que tu organización crezca, puedes apoyarla financieramente desde aquí",
+  "This is the Create post tab here you can add post to the current selected organization": "Esta es la pestaña de Crear publicación; aquí puedes agregar una publicación a la Organización actualmente seleccionada",
+  "This is the Chat tab here you can see all your messages of the current selected organization": "Esta es la pestaña de Chat; aquí puedes ver todos tus mensajes de la Organización actualmente seleccionada",
+  "To help your organization grow you can support them financially from here": "Para ayudar a que tu Organización crezca, puedes apoyarla financieramente desde aquí",
   "You are all set to go let's get you in": "Estás listo para ir, vamos a empezar",
-  "You have no event in this organization": "No tienes ningún evento en esta organización",
+  "You have no event in this organization": "No tienes ningún evento en esta Organización",
   "Create your first event": "Crea tu primer evento",
-  "There are no posts in this organization": "No hay publicaciones en esta organización",
+  "There are no posts in this organization": "No hay publicaciones en esta Organización",
   "Create your first post": "Crea tu primera publicación",
-  "You have no post in this organization": "No tienes ninguna publicación en esta organización",
+  "You have no post in this organization": "No tienes ninguna publicación en esta Organización",
   "You can create a new event from here": "Puede crear un nuevo evento desde aquí",
   "You are all set to go lets get you in": "Ya estás listo para irte, vamos a meterte",
   "App Tour": "Tour de la aplicación",
@@ -258,7 +254,7 @@
   "Help & Support": "Ayuda y soporte",
   "Talawa Docs": "Talawa Documentos",
   "All day": "Todo el día",
-  "Join an Organisation": "Únete a una organización",
+  "Join an Organisation": "Únete a una Organización",
   "DONATE": "DONAR",
   "Permission Denied": "Permiso denegado",
   "Camera permission is required, to use this feature, give permission from app settings": "Se requiere permiso de cámara para usar esta función. Otorgue el permiso desde la configuración de la aplicación.",
@@ -269,8 +265,7 @@
   "Organization Not Found": "Organización no encontrada",
   "Account with this email already registered": "Cuenta con este correo electrónico ya registrada",
   "Something went wrong!": "¡Algo salió mal!",
-  "URL doesn't exist/no connection please check": "La URL no existe/no hay conexión, verifique",
-  "The QR is not Working": "El código QR no funciona",
+  "URL doesn't exist/no connection please check": "La URL no existe/no hay conexión, verifique",  "URL is valid": "La URL es válida",  "The QR is not Working": "El código QR no funciona",
   "This QR version is not Supported.": "Esta versión de QR no es compatible.",
   "Comment sent": "Comentario enviado",
   "Server not running/wrong url": "Servidor no en ejecución/URL incorrecta",
@@ -287,7 +282,7 @@
   "Members": "Miembros",
   "Remember me": "Recuérdame",
   "Login directly with": "Iniciar sesión directamente con",
-  "Continue Without Organization": "Continuar sin organización",
+  "Continue Without Organization": "Continuar sin Organización",
   "No admins assigned": "No hay admins asignados",
   "Delete Pledge": "Eliminar Promesa",
   "Delete": "Eliminar",
@@ -315,7 +310,7 @@
   "There are no pledges you are part of": "No hay promesas de las que formes parte",
   "Cannot add pledge after campaign end date": "No se puede agregar promesa después de la fecha de finalización de la campaña",
   "Cannot add pledge before campaign start date": "No se puede agregar promesa antes de la fecha de inicio de la campaña",
-  "No funds in this organization.": "No hay fondos en esta organización.",
+  "No funds in this organization.": "No hay fondos en esta Organización.",
   "Unknown Date": "Fecha Desconocida",
   "Unnamed Fund": "Fondo Sin Nombre",
   "Fund ID is not available": "El ID del fondo no está disponible",
