--- a/lang/hi.json
+++ b/lang/hi.json
@@ -179,10 +179,6 @@
   "COMPLETE": "पूर्ण",
   "Start app tour to know talawa functioning": "Talawa कार्यप्रणाली जानने के लिए ऐप टूर शुरू करें",
   "Scan QR": "QR स्कैन करें",
-  "The Camera is not working": "कैमरा काम नहीं कर रहा है",
-  "The QR is not Working": "QR काम नहीं कर रहा है",
-  "This QR version is not Supported.": "यह QR संस्करण समर्थित नहीं है।",
-  "This QR is not for the App": "यह QR ऐप के लिए नहीं है",
   "Add tag": "टैग जोड़ें",
   "Enter the Tag": "टैग दर्ज करें",
   "Title": "शीर्षक",
@@ -270,6 +266,7 @@
   "Account with this email already registered": "इस ईमेल से पहले से ही खाता रजिस्टर किया गया है",
   "Something went wrong!": "कुछ गलत हो गया!",
   "URL doesn't exist/no connection please check": "URL मौजूद नहीं है/कृपया कनेक्शन की जाँच करें",
+  "URL is valid": "URL मान्य है",
   "The QR is not Working": "QR काम नहीं कर रहा है",
   "This QR version is not Supported.": "यह QR वेर्जन समर्थित नहीं है।",
   "Comment sent": "टिप्पणी भेज दी गई",
