--- a/lang/zh.json
+++ b/lang/zh.json
@@ -179,10 +179,6 @@
   "COMPLETE": "完成",
   "Start app tour to know talawa functioning": "启动应用程序导览以了解塔拉瓦的功能",
   "Scan QR": "扫描QR码",
-  "The Camera is not working": "相机无法工作",
-  "The QR is not Working": "二维码无法工作",
-  "This QR version is not Supported.": "不支持此二维码版本。",
-  "This QR is not for the App": "此二维码不适用于该应用",
   "Add tag": "添加标签",
   "Enter the Tag": "输入标签",
   "Title": "标题",
@@ -270,6 +266,7 @@
   "Account with this email already registered": "该电子邮件已注册帐户",
   "Something went wrong!": "出错了！",
   "URL doesn't exist/no connection please check": "URL不存在/没有连接，请检查",
+  "URL is valid": "URL有效",
   "The QR is not Working": "二维码无法使用",
   "This QR version is not Supported.": "不支持此二维码版本。",
   "Comment sent": "已发送评论",
