json formatting for es.json

--- a/lang/es.json
+++ b/lang/es.json
@@ -265,7 +265,9 @@
   "Organization Not Found": "Organización no encontrada",
   "Account with this email already registered": "Cuenta con este correo electrónico ya registrada",
   "Something went wrong!": "¡Algo salió mal!",
-  "URL doesn't exist/no connection please check": "La URL no existe/no hay conexión, verifique",  "URL is valid": "La URL es válida",  "The QR is not Working": "El código QR no funciona",
+  "URL doesn't exist/no connection please check": "La URL no existe/no hay conexión, verifique",  
+  "URL is valid": "La URL es válida",  
+  "The QR is not Working": "El código QR no funciona",
   "This QR version is not Supported.": "Esta versión de QR no es compatible.",
   "Comment sent": "Comentario enviado",
   "Server not running/wrong url": "Servidor no en ejecución/URL incorrecta",
