Revert event-related files and deprecation fixes to clean PR scope

--- a/lang/en.json
+++ b/lang/en.json
@@ -328,5 +328,6 @@
   "Upcoming": "Upcoming",
   "Ended": "Ended",
   "Active": "Active",
-  "Unnamed Organization": "Unnamed Organization"
+  "Unnamed Organization": "Unnamed Organization",
+  "Try Demo": "Try Demo"
 }
