--- a/lang/de.json
+++ b/lang/de.json
@@ -279,7 +279,7 @@
   "Organisation on different server, logout and scan qr again": "Organisation auf einem anderen Server, ausloggen und QR-Code erneut scannen",
   "Post was deleted if you had the rights!": "Der Beitrag wurde gelöscht, wenn Sie die Berechtigungen hatten!",
   "Members": "Mitglieder",
-  "Remember me": "Erinnere dich an mich", 
+  "Remember me": "Erinnere dich an mich",
   "Login directly with": "Direkt anmelden mit",
   "Continue Without Organization": "Ohne Organisation fortfahren",
   "No admins assigned": "Keine Admins zugewiesen",
@@ -328,5 +328,6 @@
   "Upcoming": "Bevorstehend",
   "Ended": "Beendet",
   "Active": "Aktiv",
-  "Unnamed Organization": "Unbenannte Organisation"
+  "Unnamed Organization": "Unbenannte Organisation",
+  "Try Demo": "Demo ausprobieren"
 }
