--- a/lang/es.json
+++ b/lang/es.json
@@ -328,5 +328,6 @@
   "Upcoming": "Próxima",
   "Ended": "Terminada",
   "Active": "Activa",
-  "Unnamed Organization": "Organización Sin Nombre"
+  "Unnamed Organization": "Organización Sin Nombre",
+  "Try Demo": "Prueba Demo"
 }
