--- a/lang/zh.json
+++ b/lang/zh.json
@@ -328,5 +328,6 @@
   "Upcoming": "即将到来",
   "Ended": "已结束",
   "Active": "活跃",
-  "Unnamed Organization": "未命名组织"
+  "Unnamed Organization": "未命名组织",
+  "Try Demo": "试用演示"
 }
